# capnproto-dart

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  performance.md  pubspec.yaml
.claude/: skills
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: compat.yml  docs-deploy.yml  docs-version.yml  docs.yml
ci/: run-tests.sh  update-capnp-version.sh  version-docs.sh
dev_packages/capnpc-dart/: README.md  pubspec.yaml
dev_packages/capnpc-dart-builder/: build.yaml  pubspec.yaml
dev_packages/capnpc-dart-builder/lib/: builder.dart
dev_packages/capnpc-dart-builder/test/: capnp_builder_test.dart
dev_packages/capnpc-dart/doc/: external-spec.md  internal-design.md
dev_packages/capnpc-dart/lib/: capnpc_dart.dart
dev_packages/capnpc-dart/test/: compat_checker_test.dart  generator_test.dart
docs/: ai-rule.md  boundary-design.md  constraint.md  global-design.md  internal-design.md  purpose.md  scope.md  usecase.md
docs/howto/: getting-started.md  rpc.md  samples-and-testing.md  schema-and-codegen.md  serialization.md
sample/complex/client/: pubspec.yaml
sample/complex/dart-server/: pubspec.yaml
sample/greeter/server/: Cargo.toml  build.rs
sample/greeter/server/src/: main.rs
sop/: bug-fix.md  feature.md  initial-dev.md  setup-improvement.md
sop/steps/: build.md  design.md  investigate.md  release.md  request.md  setup.md  survey.md  validate.md
test/interop/benchmark/rust/: Cargo.toml  build.rs
tools/capnpc-dart/: CHANGELOG.md  README.md  pubspec.yaml
website/: README.md  docusaurus.config.js  package-lock.json  package.json
(+53 files in other folders)
