[package]
name = "capnproto-dart-benchmark-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "serialization_benchmark"
path = "src/bin/serialization_benchmark.rs"

[[bin]]
name = "rpc_benchmark"
path = "src/bin/rpc_benchmark.rs"

[[bin]]
name = "rpc_uds_benchmark"
path = "src/bin/rpc_uds_benchmark.rs"

[dependencies]
capnp = "0.26"
capnp-rpc = "0.26"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }

[build-dependencies]
capnpc = "0.26"
